// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component AttributionIncomplete should have a proper style generator 1`] = `
Object {
  "checkboxRoot": Object {},
  "label": Object {
    "fontSize": 16,
    "fontWeight": 300,
    "lineHeight": "24px",
    "textAlign": "justify",
  },
  "root": Object {
    "margin": 0,
  },
}
`;

exports[`Component AttributionIncomplete should have a proper style generator 2`] = `
Object {
  "checkboxRoot": Object {},
  "label": Object {
    "fontSize": 16,
    "fontWeight": 300,
    "lineHeight": "24px",
    "textAlign": "justify",
  },
  "root": Object {
    "margin": 0,
  },
}
`;

exports[`Component AttributionIncomplete should render checked if record is checked 1`] = `
<div>
  <div>
    <span
      class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
    >
      Test detail
    </span>
  </div>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1didq2u-MuiButtonBase-root-MuiCheckbox-root"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input css-1m9pwf3"
        data-analyticsid="attributionIncomplete-input"
        data-indeterminate="false"
        data-testid="attributionIncomplete-input"
        id="attributionIncomplete-input"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="CheckBoxIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </span>
    <div
      class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
      data-testid="attributionIncomplete-label"
      id="attributionIncomplete-label"
    >
      Test statement
    </div>
  </label>
</div>
`;

exports[`Component AttributionIncomplete should render default view 1`] = `
<div>
  <div>
    <span
      class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
    >
      Test detail
    </span>
  </div>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1didq2u-MuiButtonBase-root-MuiCheckbox-root"
    >
      <input
        class="PrivateSwitchBase-input css-1m9pwf3"
        data-analyticsid="attributionIncomplete-input"
        data-indeterminate="false"
        data-testid="attributionIncomplete-input"
        id="attributionIncomplete-input"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="CheckBoxOutlineBlankIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </span>
    <div
      class="MuiTypography-root MuiTypography-body1 css-u1nwny-MuiTypography-root"
      data-testid="attributionIncomplete-label"
      id="attributionIncomplete-label"
    >
      Test statement
    </div>
  </label>
</div>
`;
